--- a/0x02-i18n/templates/7-index.html
+++ b/0x02-i18n/templates/7-index.html
@@ -14,5 +14,8 @@
             {{ _('not_logged_in') }}
         {% endif %}
     </p>
+    <p>
+        {{ _('timezone', timezone=g.timezone) }}
+    </p>
 </body>
 </html>
